cp/php-sender/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-sender
  namespace: my-cp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-sender-app
  template:
    metadata:
      labels:
        app: php-sender-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
        - name: php-sender-container
          image: bitnami/php-fpm
          volumeMounts:
            - name: nginx-config
              mountPath: /opt/bitnami/php/etc/php-fpm.d/www.conf
              subPath: www.conf
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "curl -o /app/index.php https://raw.githubusercontent.com/burundtriogeeks/DKHW/refs/heads/main/cp/php-sender/index.php"]
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
