cp/php-sender/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-sender-service
  namespace: nginx
spec:
  selector:
    app: php-sender-app
  ports:
    - protocol: TCP
      port: 80
