cp/php-sender/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-sender-ingress
  namespace: my-cp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
    - host: sender.k8s.loc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-sender-service
                port:
                  number: 80
